--- a/src/pages/FurnitureList.css
+++ b/src/pages/FurnitureList.css
@@ -45,6 +45,10 @@
   padding: 48px 24px;
   min-height: 100vh;
   background-size: 300px;
+
+  background-image: linear-gradient(rgb(0, 0, 0, 0.40), rgb(0, 0, 0, 0.40)), url(../assets/Homepage.jpg);
+  background-size: cover;
+	background-position: center;
 }
 
 .list-header {
@@ -54,13 +58,13 @@
 
 .list-header h2 {
   font-size: 2.8rem;
-  color: #1a202c;
+  color: #141c29;
   font-weight: 700;
   margin-bottom: 12px;
 }
 
 .list-header p {
-  color: #4a5568;
+  color: black;
   font-size: 1.15rem;
 }
 
@@ -74,7 +78,7 @@
 }
 
 .furniture-card {
-  background-color: #ffffff;
+  background-color: #b4b1b1;
   border-radius: 16px;
   box-shadow: 0 6px 14px rgba(0, 0, 0, 0.08);
   transition: all 0.3s ease;
