--- a/src/components/ARView.css
+++ b/src/components/ARView.css
@@ -13,8 +13,14 @@ code {
 }
 
 #canvas {
-  width: 100%;
-  height: 85vh;
+  width: 100vw;
+  height: 100vh;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background: transparent;
 }
 
 .navbar {
